# fastapi-gcp-demo

./: Dockerfile  README.md  pyproject.toml
scripts/: run_api.sh
